fix board overlay overlap buttons with subtask

--- a/css/board.css
+++ b/css/board.css
@@ -2266,7 +2266,7 @@ h2 {
 }
 
 .big-task-panel {
-    height: 100%;
+    height: 94%;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
